@@ -7,4 +7,9 @@ class TestBigDecimalUtil < Test::Unit::TestCase
     x = BigDecimal(1)
     assert_same(x, x.to_d)
   end
+
+  def test_Integer_to_d
+    assert_equal(BigDecimal(1), 1.to_d)
+    assert_equal(BigDecimal(2<<100), (2<<100).to_d)
+  end
 end
